# RLproj

./: .gitignore  EXPERIMENT_PLAN.md  README.md  REPRODUCE_SCALER.md  all_arms_logs.tgz  des.md  idea.html  poster.html  poster.tex  poster_academic.html  poster模板.pptx  pyproject.toml  requirements.txt  results (1).tgz  results.tgz  results_all_arms.tgz
configs/: profiles.sh
paper/: PAPER_OUTLINE.md  derivation.md  main.tex  neurips_2024.sty  refs.bib
poster/: POSTER_OUTLINE.md
results/: REPORT.md  metrics.csv
results/sim/: STAD(ours).json  STAD+LP(ours-full).json  static-easy+LP.json  static-easy.json  static-hard.json  summary.json  threshold(RLVE).json  threshold+LP.json
results_all_arms/: ANALYSIS.md  ANALYSIS_REPORT.md  REPORT.md  metrics.csv
results_logs_all_arms/fep/: worker-44bf494db8995be18662fba87dc9b2b6a74cbb7d82a7c1ac5747d934-02000000-3383578.out  (+1 more)
rlve/: __init__.py  callbacks.py  curriculum.py  curriculum_types.py  data.py  eval_set.py  evaluate.py  reward.py  stats.py  train.py  verify.py
rlve_repro/: EXPERIMENT_PLAN.md  README.md  active_inference_controller.py  active_inference_manager.py  analyze_rlve.py  apply_patch.py  diagnostics.py  freeenergy_controller.py  freeenergy_manager.py  plot_competence.py  run_arm.sh  run_prorl_1gpu.sh
scaler_addon/: README.md  analyze.py  apply_freeenergy_patch.py  freeenergy_difficulty.py  run_arms.sh
scripts/: run_2gpu.sh  run_4b_2gpu.sh  run_all.sh  run_ddp.sh  run_scaler_4arms.sh  scaler_arm.sh  setup_remote.sh  smoke_test.sh
tools/: plot_results.py  scaler_make_arms.py  selftest.py  simulate.py
(+18 files in other folders)
