[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "rlve-lite"
version = "0.1.0"
description = "Lightweight RLVE: RL for LMs with adaptive verifiable environments (course project)"
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.24",
    "matplotlib>=3.7",
]

[tool.setuptools]
packages = ["rlve", "rlve.envs", "rlve.difficulty"]
